build first route tests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,3 +36,4 @@ flutter:
     - assets/rolls_royce_logo.png
     - assets/general_motors_logo.png
     - assets/mini_logo.png
+    - assets/first_route_image.png
